# english-dictionary

./: .gitignore  README.md  main.py  pyproject.toml
app_logs/: app_logger.py
templates/: index.html
